# playtrack

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pages.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  crop_planner.py  exporter.py  jobs.py  library.py  main.py  security.py  selection.py  tracking.py  videos.py
backend/app/models/: __init__.py  locate_engine.py  sam2_engine.py
backend/tests/: conftest.py  test_crop_planner.py  test_export_api.py  test_exporter.py  test_fetch_models.py  test_frontend_serving.py  test_jobs.py  test_library.py  test_locate_engine.py  test_locate_integration.py  test_sam2_engine.py  test_sam2_integration.py  test_security.py  test_select_api.py  test_selection_geometry.py  test_source_crop_io.py  test_sqlite_library.py  test_text_selection.py  test_track_api.py  test_tracking.py  test_tracking_config.py  test_tracking_frame_io.py  test_videos.py  test_windows_scripts.py
docs/: plan.md
frontend/: index.html  package-lock.json  package.json  test-pwa.mjs  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.ts  App.tsx  api.test.ts  api.ts  frameRange.test.ts  frameRange.ts  geometry.test.ts  geometry.ts  main.tsx  pwa.test.ts  pwa.ts  styles.css  trackHealth.test.ts  trackHealth.ts  workflow.test.ts  workflow.ts
scripts/: __init__.py  dev.ps1  dev.sh  fetch_models.py  run.ps1
website/: 404.html  index.html  site.js  styles.css  test-site.mjs
(+44 files in other folders)
